--- a/app/src/main/res/drawable-v24/circle.xml
+++ b/app/src/main/res/drawable-v24/circle.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/white" />
+    <solid android:color="#cba" />
     <size android:width="@dimen/item_width"
         android:height="@dimen/item_width" />
 
